@@ -36,7 +36,7 @@
  * 
  * Completes partial file and directory names given a partial string by
  * looking in the file system for clues. Can return a list of possible 
- * completion strings for widget implementation.
+ * completion strings for widget implementations.
  * 
  **/
 
